# SurveyOpsPlus

./: .gitignore  README.md
backend/: .env.example  README.md  conftest.py  generate-report  pyproject.toml  pyrightconfig.json  requirements.txt
backend/containers/: build.sh  docker-compose.yaml
backend/containers/base/: Dockerfile
backend/containers/db/: init.sql
backend/containers/server/: Dockerfile
backend/docs/: README.md  dropbox_setup.md
backend/docs/arch/: prerequisite.sh
backend/docs/osx/: prerequisite.sh
backend/docs/ubuntu/: prerequisite.sh
backend/docs/windows/: prerequisite.ps1
backend/evaluation/: judge_llm.py  rubric_loader.py
backend/experiments/: __init__.py  refrigerated_cargo.py  report_generation.py
backend/graph/: edges.py  graph.py  nodes.py  run.py  state.py
backend/llm/gemini/: __init__.py  utils.py
backend/llm/prompts/: __init__.py  prompts.py
backend/responses/experiment0/: formated_response.json
backend/responses/experiment1/: report_8aedc_2026_02_22_gemini-2.5-flash.md  report_fce30_2026_02_18_gemini-2.5-flash.md  response_1c59b_2026_02_22_gemini-2.5-flash.json  (+1 more)
backend/results/: bae88907-4f2b-41cb-b511-89d303d9bda1_report.md  e9f896d9-4cf6-4519-96f9-464579124065_report.md  eval_output.md  f92b53b5-8759-47b0-b78c-f84c686d41d4_report.md  test_report.docx
backend/scripts/: generate_graphs.py
backend/src/: constants.py  main.py  test_eval.py
backend/tests/: README.md
backend/utils/: __init__.py  cli.py  file.py  gemini_helpers.py  llm_client.py  report_image_embedder.py  resolve_path.py  template_utils.py
(+202 files in other folders)
